fixed content hiding behind footer

--- a/client/src/layout/Layout.css
+++ b/client/src/layout/Layout.css
@@ -18,22 +18,28 @@
 }
 
 main {
-  height: calc(100% - 73px);
+  /* height: calc(100% - 73px); */
+  padding-bottom: 73px;
 }
 
-footer > div {
+footer {
   bottom: 0;
   position: fixed;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: flex-start;
   width: 100%;
   height: 73px;
-  padding: 11px 0 0 0;
   margin-top: auto;
   border-top: solid 0.5px #212121;
   box-sizing: border-box;
   background-color: #000;
+}
+
+footer > div {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  width: 100%;
+  height: 100%;
+  padding: 11px 0 0 0;
 }
 
 .footer-account {
